1.如何判断GC Roots是否可达？(判断对象是否可以被回收) 2.JVM参数类型有哪些，如何修改 3.如何查看JVM默认值和修改过的值